# hysoftware.net

./: .bowerrc  .codeclimate.yml  .dockerignore  .editorconfig  .eslintrc.js  .eslintrc.yml  .gitattributes  .gitignore  .landscape.yml  .travis.yml  Cargo.toml  Dioxus.toml  Dockerfile  Gemfile  Gruntfile.js  LICENSE  LICENSE.md  Procfile  README.md  ajax.sh  angular.json  bower.json  coffeelint.json  cypress.config.ts  deploy.js  deploy.sh  docker-compose.yml  eslint.config.js  excludelist.txt  gulpfile.coffee  gulpfile.js  heroku.yml  lambda_app.py  legal.json  manage.py  modernizr.conf.json  module_rules.js  module_rulse.js  pack.sh  package-lock.json  (+21 more)
.circleci/: config.yml  setup-heroku.sh
.ebextensions/: app.config  cron.config
.qlty/: qlty.toml
about/: __init__.py  admin.py  noum_generator.py  tests.py  urls.py  views.py
app/: __init__.py  celery_app.py  config.py  jinja_env.py  main.coffee  main.less  main.py  urls.py  wsgi.py
assets/: license.json  main.css
common/: __init__.py  gen_hash.py
contact/: __init__.py  admin.py  forms.py  models.py  tests.py  urls.py  views.py
docker/: runserver.sh
e2e/: protractor.conf.js
etc/: eslint.json  heroku.yml  karma.conf.coffee  protractor.coffee  uwsgi.yml  uwsgi_devel.yml  uwsgi_public.yml
grunt/: closure.js  common.js  cssprefix.js  e2e.js  frontend_unit_test.js  jslint.js  scss.js  shell.js  third_party_uglify.js  watch.js
gulp/: backend.coffee  frontend.coffee  selfcheck.coffee  third_party.coffee
home/: __init__.py  admin.py  models.py  tests.py  urls.py  views.py
hysoft/: __init__.py  urls.py  (+2 more)
(+433 files in other folders)
